--- a/LavaMex/src/pages/inicio/inicio.html
+++ b/LavaMex/src/pages/inicio/inicio.html
@@ -22,11 +22,11 @@
 		<ion-list>
 
 		  <ion-item  id="in1">
-		    <ion-input type="text" placeholder="Correo"></ion-input>
+		    <ion-input type="text" placeholder="Correo" [(ngModel)]="correo"></ion-input>
 		  </ion-item>
 
 		  <ion-item  id="in2">
-		    <ion-input type="password" placeholder="Contraseña"></ion-input>
+		    <ion-input type="password" placeholder="Contraseña" [(ngModel)]="pass"></ion-input>
 		  </ion-item>
 
 		</ion-list>
@@ -37,7 +37,7 @@
 
 	<div padding text-center>
 
-		<b>¿Eres nuevo? <a>Regístrate</a></b>
+		<b>¿Eres nuevo? <a (click)="registrar()">Regístrate</a></b>
 
 	</div>
 
