--- a/LavaMex/src/pages/inicio/inicio.html
+++ b/LavaMex/src/pages/inicio/inicio.html
@@ -13,7 +13,7 @@
 
 	<div padding text-center color="blue" id="tit">
 
-		<ion-img src="../assets/imgs/shine.png" id="logo"></ion-img>
+		<ion-img src="../assets/imgs/shine.png" style="background: transparent" id="logo"></ion-img>
 
 	</div>
 
@@ -49,7 +49,7 @@
 
 	<div padding text-center>
 
-		<button ion-button full id="sol" (click)="entrar()">Ingresar con Facebook</button>
+		<button ion-button full id="sol" (click)="loginfb()">Ingresar con Facebook</button>
 
 	</div>
 
