--- a/LavaMex/src/pages/perfil/perfil.html
+++ b/LavaMex/src/pages/perfil/perfil.html
@@ -16,9 +16,8 @@
 		<ion-icon #ic id="ic" name="person"></ion-icon>
 
 		<p>
-			#D45CG67
-			<br>
-			<ion-input disabled [(ngModel)]="nombre"></ion-input>
+			<ion-input id="nom" readonly [(ngModel)]="nombre"></ion-input>
+			<ion-input id="Id" readonly [(ngModel)]="id"></ion-input>
 		</p>
 
 	</div> 
