--- a/LavaMex/src/pages/historial/historial.html
+++ b/LavaMex/src/pages/historial/historial.html
@@ -4,15 +4,57 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
+<ion-header >
 
-  <ion-navbar>
-    <ion-title>historial</ion-title>
+  <ion-navbar color="bluedark">
+
+    <button ion-button menuToggle>
+      <ion-icon name="menu"></ion-icon>
+    </button>
+
+    <ion-title>Historial de Lavados</ion-title>
+
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
+
+	<ion-card *ngFor="let l of lavados">
+
+	  <ion-card-header id="tit">
+	    <ion-icon name="car" item-start></ion-icon><b style="margin-left: 5%;">Coche</b>
+	      <button (click)="guardar()" style="background:transparent;margin-left:13%;"><ion-icon name="bookmark"></ion-icon>
+	      	<b style="margin-left:2%;">Editar</b></button>
+	      <button (click)="borrar(c)" style="background:transparent;"><ion-icon name="trash"></ion-icon>
+	      	<b style="margin-left:2%;">Borrar</b></button>
+	  </ion-card-header>
+
+	  <ion-list>
+
+	  	<ion-item>
+		    Lavado: {{l.tipo}}
+		</ion-item>
+	    <hr>
+
+	    <ion-item>
+		    Pago: {{l.pago}}
+		</ion-item>
+	    <hr>
+
+	    <ion-item>
+		    Placa: {{l.placa}}
+		</ion-item>
+	    <hr>
+
+	    <ion-item>
+		    Direccion: 
+		</ion-item>
+	    <hr>
+
+	  </ion-list>
+
+	</ion-card>
 
 </ion-content>
